<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="app_name">SaasUser</string>
    <string name="action_settings">Settings</string>
    <string name="homePage">首页</string>
    <string name="userCenter">我的</string>
    <string name="setting">设置</string>
    <string name="travel_want">马上用车</string>
    <string name="travel_now">正在进行</string>
    <string name="travel_plan">未来计划</string>
    <string name="travel_record">出行记录</string>
    <string name="motor_maintenance">汽车保养</string>
    <string name="login_and_regist">登陆注册</string>
    <string name="car_center_owner">车主中心</string>
    <string name="today_earnings">今日收益</string>
    <string name="driver_guide">司机指南</string>
    <string name="personal_center">个人中心</string>
    <string name="order_recetion">订单接收</string>
    <string name="regist">注册</string>
    <string name="login">登录</string>
    <string name="app_setting">系统设置</string>
    <string name="system_setting">App设置</string>
    <string name="operating_guide">使用指南</string>
    <string name="use_guide">使用指南</string>
    <string name="about_SAAS">关于SAAS</string>
    <string name="faq">FAQ</string>
    <string name="contact_customer_service">联系客服</string>
    <string name="about_saas">关于SAAS</string>
    <string name="my_informations">个人信息</string>
    <string name="title_activity_confirm_order">ConfirmOrderActivity</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="title_activity_oder_record_detail">OderRecordDetailActivity</string>
    <string name="title_activity_order_now_wait_deil">OrderNowWaitDeilActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="software_upgrade">软件升级</string>
    <string name="password_change">密码修改</string>
    <string name="default_progressbar">进度条</string>
    <string name="dialog_default_title">提示!</string>
    <string name="dialog_ok">确定</string>
    <string name="dialog_cancel">取消</string>
    <string name="LOADING">玩命加载中...</string>
    <string name="content">请输入您的投诉和建议（100字以内）</string>
</resources>
