<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_app_setting"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/title_color"
            android:paddingBottom="10.0dip"
            android:paddingTop="10.0dip" >

            <ImageButton
                android:id="@+id/btn_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:background="@null"
                android:src="@drawable/return_icon"
                android:textSize="20dp" 
                android:textColor="@color/white" />
            

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/app_setting"
                android:textColor="@color/white"
                android:textSize="20dp" />
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/software_upgrade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/softwareupdate"
        android:drawablePadding="10dip"
        android:drawableRight="@drawable/ic_arrow"
        android:paddingBottom="10dip"
        android:paddingLeft="10dip"
        android:paddingRight="16dip"
        android:paddingTop="10dip"
        android:text="@string/software_upgrade"
        android:textSize="18sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#e3e3e3" />

    <TextView
        android:id="@+id/password_modify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/passwordmodify"
        android:drawablePadding="10dip"
        android:drawableRight="@drawable/ic_arrow"
        android:paddingBottom="10dip"
        android:paddingLeft="10dip"
        android:paddingRight="16dip"
        android:paddingTop="10dip"
        android:text="@string/password_change"
        android:textSize="18sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#e3e3e3" />

</LinearLayout>