<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <RelativeLayout
        android:id="@+id/relativeMineHeader"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:background="@color/title_color" >
         <ImageView
	         android:id="@+id/systemsetting_title_back"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:scaleType="centerInside"
	         android:src="@drawable/mm_title_back"/>

        <com.small.saasuser.view.CircleImageView
            android:id="@+id/ivPhoto"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            android:onClick="doClick"
            android:src="@drawable/touxiang" />

        <TextView
            android:id="@+id/tvNickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="5dp"
            android:text="@string/system_setting"
            android:textColor="#ffffff"
            android:textSize="18sp" />
    </RelativeLayout>
    

   

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/relativeMineHeader"
        android:layout_marginTop="3dp"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/itemShoucang"
            android:layout_width="match_parent"
            android:layout_height="44dp" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:scaleType="centerInside"
                android:src="@drawable/mine_ico_settings" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/imageView1"
                android:layout_toRightOf="@+id/imageView1"
                android:gravity="center_vertical"
                android:text="@string/app_setting" />
            <ImageView
	            android:id="@+id/imageView11"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:scaleType="centerInside"
	            android:src="@drawable/right_arrow_icon"/>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/textView3"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="10dp"
                android:layout_toEndOf="@+id/imageView1"
                android:layout_toRightOf="@+id/imageView1"
                android:background="#cccccc" />
             
            
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/itemAddress"
            android:layout_width="match_parent"
            android:layout_height="44dp" >

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:scaleType="centerInside"
                android:src="@drawable/mine_ico_settings" />

            <TextView
                android:id="@+id/tvTotalDesc"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/imageView2"
                android:layout_toRightOf="@+id/imageView2"
                android:gravity="center_vertical"
                android:text="@string/operating_guide" />
            <ImageView
	            android:id="@+id/imageView12"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:scaleType="centerInside"
	            android:src="@drawable/right_arrow_icon"/>"

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/tvTotalDesc"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="10dp"
                android:layout_toEndOf="@+id/imageView2"
                android:layout_toRightOf="@+id/imageView2"
                android:background="#cccccc" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/itemAddress1"
            android:layout_width="match_parent"
            android:layout_height="44dp" >

            <ImageView
                android:id="@+id/imageView22"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:scaleType="centerInside"
                android:src="@drawable/mine_ico_address" />

            <TextView
                android:id="@+id/tvTotalDesc1"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/imageView22"
                android:layout_toRightOf="@+id/imageView22"
                android:gravity="center_vertical"
                android:text="@string/faq" />
            <ImageView
	            android:id="@+id/imageView122"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:scaleType="centerInside"
	            android:src="@drawable/right_arrow_icon"/>"

            <TextView
                android:id="@+id/textView44"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/tvTotalDesc1"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="10dp"
                android:layout_toEndOf="@+id/imageView22"
                android:layout_toRightOf="@+id/imageView22"
                android:background="#cccccc" />
        </RelativeLayout>
        

        <RelativeLayout
            android:id="@+id/itemOrder"
            android:layout_width="match_parent"
            android:layout_height="44dp" >

            <ImageView
                android:id="@+id/imageView31"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:scaleType="centerInside"
                android:src="@drawable/mine_ico_address" />

            <TextView
                android:id="@+id/textView32"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/imageView31"
                android:layout_toRightOf="@+id/imageView31"
                android:gravity="center_vertical"
                android:text="@string/contact_customer_service" />
            <ImageView
	            android:id="@+id/imageView13"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:scaleType="centerInside"
	            android:src="@drawable/right_arrow_icon"/>

            <TextView
                android:id="@+id/textView33"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/textView32"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="10dp"
                android:layout_toEndOf="@+id/imageView31"
                android:layout_toRightOf="@+id/imageView31"
                android:background="#cccccc" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/itemSettings"
            android:layout_width="match_parent"
            android:layout_height="44dp" >

            <ImageView
                android:id="@+id/imageView41"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:scaleType="centerInside"
                android:src="@drawable/mine_ico_address" />

            <TextView
                android:id="@+id/textView42"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/imageView41"
                android:layout_toRightOf="@+id/imageView41"
                android:gravity="center_vertical"
                android:text="@string/about_saas" />
            <ImageView
	            android:id="@+id/imageView14"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:scaleType="centerInside"
	            android:src="@drawable/right_arrow_icon"/>

            <TextView
                android:id="@+id/textView43"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/textView42"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="10dp"
                android:layout_toEndOf="@+id/imageView41"
                android:layout_toRightOf="@+id/imageView41"
                android:background="#cccccc" />
        </RelativeLayout>

        
      
    </LinearLayout>

</RelativeLayout>